tester/tests/compile-fail/application-invalid-host.srv
application App
    host(123123)
end
